# opencv-tutorial

./: CMakeLists.txt  CMakePresets.json  build.ps1  clean.ps1  run_debug.ps1  run_release.ps1  vcpkg.json
ipynb/: watershed_algorithm.ipynb
targets/common/: config.h.in
targets/common/include/: utils.hpp
targets/common/include/opencv/: video_stream.hpp  webcam_face_detection_stream.hpp  webcam_object_tracking_stream.hpp
targets/common/include/qt/: VideoItem.hpp  WebCamFaceDetectionItem.hpp  WebCamObjectTrackingItem.hpp
targets/common/src/opencv/: webcam_face_detection_stream.cpp  webcam_object_tracking_stream.cpp
targets/common/src/qt/: VideoItem.cpp  WebCamFaceDetectionItem.cpp  WebCamObjectTrackingItem.cpp
targets/gstreamer/: CMakeLists.txt
targets/gstreamer/src/: main.cpp
targets/object_detection/: CMakeLists.txt
targets/object_detection/include/: image_info.hpp  image_provider.hpp
targets/object_detection/include/image_providers/: contour_detector.hpp  corner_detector.hpp  edge_detector.hpp  face_detector.hpp  feature_matcher.hpp  grid_detector.hpp  license_plate_detector.hpp  template_matcher.hpp  watershed_image_provider.hpp
targets/object_detection/include/qt/: ImageLoader.hpp  ImageModel.hpp  ImageProvider.hpp  VideoItem.hpp
targets/object_detection/resources/qml/: main.qml
targets/object_detection/src/: main.cpp  utils.cpp
targets/object_detection/src/image_providers/: contour_detector.cpp  corner_detector.cpp  edge_detector.cpp  face_detector.cpp  feature_matcher.cpp  grid_detector.cpp  license_plate_detector.cpp  template_matcher.cpp  watershed_image_provider.cpp
targets/object_detection/src/qt/: ImageLoader.cpp  ImageModel.cpp  ImageProvider.cpp  VideoItem.cpp
targets/object_tracking/: CMakeLists.txt
targets/object_tracking/resources/qml/: main.qml
targets/object_tracking/src/: main.cpp
